# AI-Chatbot

./: README.md  main.py  pyproject.toml
backend/: app.py
backend/agent/bulk_agent/ranking_agent/: agent.py
backend/agent/bulk_agent/resume_parser_agent/: agent.py
backend/agent/bulk_agent/scenario_simulation_agent/: agent.py
backend/agent/bulk_agent/search_agent/: agent.py
backend/agent/bulk_agent/talent_analytics_agent/: agent.py
backend/agent/individual_agent/candidate_insight_agent/: agent.py
backend/agent/individual_agent/candidate_profile_agent/: agent.py
backend/agent/individual_agent/interview_intelligence_agent/: agent.py
backend/agent/individual_agent/match_agent/: agent.py  prompt.yaml  schema.py
backend/api/: candidate.py  job_description.py  match.py  upload.py
backend/cli/: seed_demo.py
backend/config/: config.py
backend/data/: hiring_platform.db
backend/ingestion/jd_parser/: prompt.yaml
backend/ingestion/resume_parser/: agent.py  prompt.yaml
backend/models/: schemas.py
backend/repositories/: candidate_repo.py  jd_repo.py
backend/schema/: input_schema.py  output_schema.py
backend/services/: llm_service.py  match_service.py  parser_service.py  prompt_loader.py  storage_service.py  vector_service.py
backend/tests/: test_agents.py  test_api.py  test_api_match.py  test_config.py  test_match.py  test_match_agent.py  test_storage.py
backend/utils/: logger.py
